# mvp-consumer

./: Cargo.toml
src/: main.rs
