[package]
name = "mvp-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "=1.0.0-beta.6", features = ["display", "error", "from"] }
futures = "0.3.29"
rdkafka = "0.36"
stream-cancel = "0.8"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "signal"] }
